<resources>
    <string name="app_name">Gestion de Stock</string>
    <string name="button_client">Liste des Clients</string>
    <string name="button_modele">Liste des Modèles</string>
    <string name="bonjour">Bonjour M./Mme</string> <!-- Utilisation correcte des abréviations pour Monsieur et Madame -->
    <string name="titre">Titre</string>
    <string name="name">Nom</string> <!-- Correction de "name" pour "Nom" afin de correspondre au contexte -->
    <string name="nom_de_modele">Nom du modèle</string> <!-- Correction : "Nom du modèle" au lieu de "nom de modele" -->
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="diter">Éditer</string> <!-- Correction de "diter" à "Éditer" -->
    <string name="supprimer">Supprimer</string>
    <string name="prenom">Prénom</string> <!-- Correction : "Prénom" avec accent aigu -->
    <string name="nom">Nom</string>
    <string name="telephone">Téléphone</string> <!-- Correction : "Téléphone" avec accent aigu -->
    <string name="email">Email</string>
    <string name="editer_client">Éditer Client</string> <!-- Correction : "Éditer" avec accent aigu -->
    <string name="rechercher_par_nom">Rechercher par nom</string>
    <string name="reste_prix">Reste à payer</string> <!-- Correction pour meilleure clarté : "Reste à payer" -->
    <string name="avance">Avance</string>
    <string name="total">Total</string>
    <string name="commande">Commande</string>
    <string name="prix">Prix</string>
    <string name="modele">Modèle</string> <!-- Correction : "Modèle" avec accent aigu -->
    <string name="image">Image</string>
    <string name="ajouter_modele">Ajouter un modèle</string> <!-- Correction : "Ajouter un modèle" pour plus de clarté -->
    <string name="hello_blank_fragment">Hello fragment vide</string> <!-- Correction pour traduire "blank fragment" -->
    <string name="couleur">Couleur</string>
    <string name="quantite">Quantité</string> <!-- Correction : "Quantité" avec accent aigu -->
    <string name="_0">0</string>
    <string name="add_row">Ajouter une autre couleur</string> <!-- Correction : "Ajouter une autre couleur" pour correspondre au contexte -->
    <string name="les_images">Les images</string>
    <string name="toast_develement">Cette partie est en cours de développement</string>
    <string name="client_non_trouve">Client non trouvé</string>
    <string name="probleme">Il y a un problème</string>
    <string name="commande_supprimer">" La commande a été supprimée"</string>
    <string name="article_supprimer">" L'article a été supprimée"</string>

    <string name="error" />
    <string name="error_suuprimer">Erreur lors de la suppression</string>
    <string name="client_supprimer">Le client a été supprimé</string>
    <string name="error_supprimer_user">" L'utilisateur n'a pas été trouvé pour la suppression"</string>
    <string name="permission_denied_call">" Permission refusée pour passer des appels"</string>
    <string name="model_name">Veuillez entrer un nom de modèle</string>
    <string name="failed_commande">Échec de l\'insertion de la commande</string>
    <string name="donnee_incorrect">"Données incorrectes "</string>
    <string name="entrer_quantite">Veuillez ajouter quelques commandes supplémentaires\"</string>
    <string name="save_succesuful">"Enregistré avec succès "</string>
    <string name="no_commande">Aucune commande enregistrée trouvée</string>
    <string name="meme_commande">Certaines commandes ont la même couleur. Veuillez les corriger</string>
    <string name="fermer">Fermer</string>
    <string name="retour">Retour</string>
    <string name="terminer">Terminer</string>
    <string name="commencer">Commencer</string>

    <string name="start">Start</string>
    <string name="notification">Notification</string>
    <string name="todo">TODO</string>
    <string name="masse_total">Masse total</string>
    <string name="masse">Masse</string>
    <string name="prix_matiere">Prix matiere</string>
    <string name="prix_1ps">Prix 1ps</string>
    <string name="prix_1ps20">Prix 1ps +20%</string>
    <string name="mandevert">Mandevert</string>
    <string name="cout">Cout</string>
    <string name="cout20">Cout + 20%</string>
    <string name="ajouter_article">Ajouter un Article</string>

    <string-array name="terminer_options">
        <item>Non</item>
        <item>Oui</item>
    </string-array>
</resources>
