<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"

    android:padding="16dp">

    <!-- Titre -->
    <TextView
        android:layout_marginVertical="10dp"
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_modele"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        style="@style/style_tv_title_post"/>

    <!-- Champs de saisie -->
    <EditText
        android:id="@+id/editModele"
        style="@style/CustomEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modele"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editPrix"
        style="@style/CustomEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prix"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editCommande"
        style="@style/CustomEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/commande"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTotal"
        style="@style/CustomEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total"
        android:inputType="number"
        android:enabled="false"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editAvance"
        style="@style/CustomEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/avance"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editReste"
        style="@style/CustomEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reste_prix"
        android:inputType="number"
        android:enabled="false"
        android:minHeight="48dp" />



    <!-- LinearLayout pour les boutons Retour et Enregistrer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/ButtonContainerStyle">

        <!-- Bouton Retour -->
        <Button
            android:id="@+id/btnRetour"
            style="@style/CustomButtonStyleAnnuler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/annuler" />

        <!-- Bouton Enregistrer -->
        <Button
            android:id="@+id/btnSave"
            style="@style/CustomButtonStyleAjouter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ajouter" />

    </LinearLayout>

</LinearLayout>
