<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewClientActivity">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_modele"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Header for column titles -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginHorizontal="5dp"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nom"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/masse_total"
            android:textStyle="bold"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"

            android:text="@string/masse"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prix_matiere"
            android:textStyle="bold"
            android:layout_marginHorizontal="5dp"

            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prix_1ps"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_marginHorizontal="5dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prix_1ps20"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"

            android:layout_weight="1"
            android:text="@string/quantite"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mandevert"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cout"
            android:textStyle="bold"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"/>

        <TextView
            android:layout_marginHorizontal="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cout20"
            android:textStyle="bold"
            android:gravity="center"/>


    </LinearLayout>

    <!-- RecyclerView for the client data -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerClient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Layout for the two buttons -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/buttonAnnuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retour"/>

        <Button
            android:id="@+id/buttonAjouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouter"
            android:layout_marginHorizontal="16dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
