<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListeClientsActivity">

    <!-- Titre au centre de l'écran -->
    <TextView
        android:id="@+id/titre"
        style="@style/style_tv_sous_title_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_client"
        android:textSize="@dimen/text_size_xlarge" />

    <!-- Barre de recherche -->
    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/search_bar_background"
        android:hint="@string/rechercher_par_nom"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp" />

    <!-- RecyclerView pour afficher les données -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyler_client"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Conteneur horizontal pour les boutons en bas de l'écran -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <!-- Bouton Annuler -->
        <Button
            android:id="@+id/btn_annuler"
            style="@style/CustomButtonStyleAnnuler"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:layout_marginEnd="8dp" />

        <!-- Bouton Ajouter -->
        <Button
            android:id="@+id/btn_ajouter"
            style="@style/CustomButtonStyleAjouter"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/ajouter" />

    </LinearLayout>

</LinearLayout>
